# metasip

./: .gitignore  .hgignore  MANIFEST.in  Makefile  NEWS  README-castxml.txt  README-gccxml.txt  README.md  TODO  build.py  msip  pyproject.toml  rb-product  rb-product.toml  setup.py
docs/: conf.py  index.rst  introduction.md  msip.md  msipgen.md  releases.md
metasip/: CastXML.py  GccXML.py  Parser.py  Project.py  WebXML.py  __init__.py  default_logger.py  dip_future.py  exceptions.py  i_project.py  i_schema.py  logger.py  logger_tool.py  main.py  main_gui.py  project_adapters.py  project_codec.py  project_editor_tool.py  project_factory.py  project_parser.py  scanner_tool.py  schema_validator_tool.py  slow_pyfile.py  stdout_logger.py  update_manager.py  versions_tool.py
metasip/QtGUI/: ClassProperties.py  Encoding.py  EnumProperties.py  EnumValueProperties.py  ExternalEditor.py  FeaturePicker.py  Generations.py  HeaderDirectoryProperties.py  ManualCode.py  ModuleProperties.py  Navigation.py  PlatformPicker.py  ProjectProperties.py  __init__.py  api_editor.py
metasip/api_editor/: Annos.py  ArgProperties.py  BaseType.py  CallableProperties.py  ClassProperties.py  Encoding.py  EnumProperties.py  EnumValueProperties.py  ExternalEditor.py  FeaturePicker.py  Generations.py  ManualCode.py  ModuleProperties.py  MoveHeader.py  NamespaceProperties.py  OpaqueClassProperties.py  PlatformPicker.py  ProjectProperties.py  VariableProperties.py  __init__.py  api_editor.py
metasip/default_update_manager/: __init__.py  update_manager.py
metasip/dip/: __init__.py
metasip/gui/: main.py  project_editor_tool.py  project_ui.py  shell.py  shell_tool.py  utils.py
metasip/helpers/: __init__.py  code_directive.py  header_directory.py  version_map.py  version_range.py
metasip/interfaces/: __init__.py  i_schema.py  i_update.py  i_update_manager.py
metasip/models/: __init__.py  access.py  access_mixin.py  annos.py  annos_mixin.py  argument.py  argument_model.py  callable.py  callable_model.py  class_callable_model.py  class_model.py  code.py  code_container.py  code_container_mixin.py  code_model.py  constructor.py  constructor_model.py  destructor.py  destructor_model.py  docstring.py  docstring_mixin.py  enum.py  enum_model.py  enum_value.py  enum_value_model.py  extended_access.py  extended_access_mixin.py  function.py  function_model.py  header_directory.py  header_directory_model.py  header_file.py  klass.py  (+35 more)
(+823 files in other folders)
