# The project configuration for metasip.

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "metasip/_version.py"

[project]
name = "metasip"
description = "GUI Development Tool for SIP"
readme = "README.md"
license.file = "LICENSE-GPL3.txt"
urls.homepage = "https://www.riverbankcomputing.com/software/metasip"
requires-python = ">=3.8"
dynamic = ["version"]

[[project.authors]]
name = "Riverbank Computing Limited"
email = "info@riverbankcomputing.com"

[project.optional-dependencies]
gui = ["PyQt6", "PyQt6-QScintilla"]

[project.scripts]
msipgen = "metasip.main:main"

[project.gui-scripts]
msip = "metasip.gui.main:main"
