# The project configuration for metasip.

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "metasip/_version.py"

[project]
name = "metasip"
description = "GUI Development Tool for SIP"
readme = "README.md"
urls.homepage = "https://github.com/Python-SIP/metasip"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: BSD License"]
dynamic = ["version"]

[[project.authors]]
name = "Phil Thompson"
email = "phil@riverbankcomputing.com"

[project.optional-dependencies]
gui = ["PyQt6", "PyQt6-QScintilla"]

[project.scripts]
msipgen = "metasip.main:main"

[project.gui-scripts]
msip = "metasip.gui.main:main"
